# FAM

./: .gitignore  MFIM_exp_any.ipynb  MFIM_noeb_mod.ipynb  MFIS_PV_curve.csv  MFIS_PV_curve_1.csv  MFIS_data_process.ipynb  MFIS_t_8_1_exp.ipynb  MFIS_t_8_2_exp.ipynb  MFIS_t_8_3_exp.ipynb  MFIS_t_8_5_exp.ipynb  MFIS_t_8_6_exp.ipynb  MFIS_t_8_7_exp.ipynb  MFIS_t_8_8_exp.ipynb  MFIS_t_8_9_exp.ipynb  MFIS_t_8_exp.ipynb  MFIS_t_8_guess_param.ipynb  steady_plot_top_phi.csv
FerroX/: .codespell-ignore-words  .codespellrc  CMakeLists.txt  Legal.txt  README.md  dependencies.json  license.txt
FerroX/Exec/: Backtrace.0  Backtrace.0.0  GNUmakefile  inputs_mfim_sundials  inputs_mfim_sundials_mri
FerroX/Exec/Examples/: inputs_mfim_Noeb_mod  inputs_mfim_test1  inputs_mfis_t8_eb  inputs_mfis_t8_eb_1  inputs_mfis_t8_eb_2  inputs_mfis_t8_eb_3  inputs_mfis_t8_eb_4fail  inputs_mfis_t8_eb_5  inputs_mfis_t8_eb_6  inputs_mfis_t8_eb_7  inputs_mfis_t8_eb_8  inputs_mfis_t8_eb_9  inputs_sundials_convergence
FerroX/Exec/MFIS_t_8_2_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_3_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_5_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_6_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_7_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_8_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_9_plt/: MFIS_PV_curve.csv
FerroX/Exec/MFIS_t_8_plt/: MFIS_PV_curve.csv
FerroX/Exec/plt00000000.old.5248183/: Header
FerroX/Exec/plt00000000.old.7867628/Level_0/: Cell_H
FerroX/Exec/plt00000021.old.9146607/: Header
FerroX/Exec/plt00000021.old.9146607/Level_0/: Cell_H
FerroX/Exec/plt00000021/Level_0/: Cell_H
FerroX/Exec/plt00000100.old.4856032/: Header
FerroX/Exec/plt00000100.old.4856032/Level_0/: Cell_H
FerroX/Exec/plt00000200.old.6166239/: Header
FerroX/Exec/plt00000300.old.9786380/: Header
FerroX/Exec/plt00000400.old.1147228/: Header
FerroX/Exec/plt00000500/: Header
FerroX/Exec/plt00000600.old.0840334/: Header
FerroX/Exec/plt00000700/: Header
FerroX/Exec/plt00000800/: Header
FerroX/Exec/plt00000900/: Header
FerroX/Exec/plt00001000.old.9288268/: Header
FerroX/Exec/plt00001100.old.2139513/: Header
FerroX/Exec/plt00001200/: Header
FerroX/Exec/plt00001300/: Header
FerroX/Exec/plt00001400/: Header
FerroX/Exec/plt00001500.old.7777153/: Header
FerroX/Exec/plt00001600.old.0332429/: Header
FerroX/Exec/plt00001700.old.6481494/: Header
FerroX/Exec/plt00001800/: Header
FerroX/Exec/plt00001900/: Header
FerroX/Exec/plt00002000/: Header
FerroX/Exec/plt00002100/: Header
FerroX/Exec/plt00002200/: Header
FerroX/Exec/plt00002300.old.9587907/: Header
FerroX/Exec/plt00002400.old.5871139/: Header
FerroX/Exec/plt00002500.old.0348035/: Header
FerroX/Exec/plt00002600/: Header
FerroX/Exec/plt00002700/: Header
FerroX/Exec/plt00002800.old.3993743/: Header
FerroX/Exec/plt00002900.old.3088118/: Header
FerroX/Exec/plt00003000/: Header
FerroX/Exec/plt00003100/: Header
FerroX/Exec/plt00003200.old.6930823/: Header
FerroX/Exec/plt00003300.old.5333140/: Header
FerroX/Exec/plt00003400.old.6597255/: Header
FerroX/Exec/plt00003500.old.1545655/: Header
FerroX/Exec/plt00003600.old.5302646/: Header
FerroX/Exec/plt00003700/: Header
FerroX/Exec/plt00003800/: Header
FerroX/Exec/plt00003900.old.6653358/: Header
FerroX/Exec/plt00004000/: Header
FerroX/Exec/plt00004100/: Header
FerroX/Exec/plt00004200/: Header
FerroX/Exec/plt00004300/: Header
FerroX/Exec/plt00004400/: Header
FerroX/Exec/plt00004500.old.3337346/: Header
FerroX/Exec/plt00004600.old.7378219/: Header
FerroX/Exec/plt00004700/: Header
FerroX/Exec/plt00004800.old.5129620/: Header
FerroX/Exec/plt00004900.old.5674691/: Header
FerroX/Exec/plt00005000/: Header
FerroX/Exec/plt00005100/: Header
FerroX/Exec/plt00005200/: Header
FerroX/Exec/plt00005300/: Header
FerroX/Exec/plt00005400/: Header
FerroX/Exec/plt00005500/: Header
FerroX/Exec/plt00005600/: Header
FerroX/Exec/plt00005700/: Header
FerroX/Exec/plt00005800/: Header
FerroX/Exec/plt00005900/: Header
FerroX/Exec/plt00006000/: Header
FerroX/Exec/plt00006100/: Header
FerroX/Exec/plt00006200/: Header
FerroX/Exec/plt00006300/: Header
FerroX/Exec/plt00006400/: Header
FerroX/Exec/plt00006500/: Header
FerroX/Exec/plt00006600/: Header
FerroX/Exec/plt00006700/: Header
FerroX/Exec/plt00006800/: Header
FerroX/Exec/plt00006900/: Header
FerroX/Exec/plt00007000/: Header
FerroX/Exec/plt00007100/: Header
FerroX/Exec/plt00007200/: Header
FerroX/Exec/plt00007300/: Header
FerroX/Exec/plt00007400/: Header
FerroX/Exec/plt00007500/: Header
FerroX/Exec/plt00007600/: Header
FerroX/Exec/plt00007700/: Header
FerroX/Exec/plt00007800/: Header
FerroX/Exec/plt00007900/: Header
FerroX/Exec/plt00008000/: Header
FerroX/Exec/plt00008100/: Header
FerroX/Exec/plt00008200/: Header
FerroX/Exec/plt00008300/: Header
FerroX/Exec/plt00008400/: Header
FerroX/Exec/plt00008500/: Header
FerroX/Exec/plt00008600/: Header
FerroX/Exec/plt00008700/: Header
FerroX/Exec/plt00008800/: Header
FerroX/Exec/plt00008900/: Header
FerroX/Exec/plt00009000/: Header
FerroX/Exec/plt00009100/: Header
FerroX/Exec/plt00009200/: Header
FerroX/Exec/plt00009300/: Header
FerroX/Exec/plt00009400/: Header
FerroX/Exec/plt00009500/: Header
FerroX/Exec/plt00009600/: Header
FerroX/Exec/plt00009700/: Header
FerroX/Exec/plt00009800/: Header
FerroX/Exec/plt00009900/: Header
FerroX/Exec/plt00010000/: Header
FerroX/Exec/plt00010100/: Header
FerroX/Exec/plt00010200/: Header
FerroX/Source/: CMakeLists.txt  FerroX.H  FerroX.cpp  FerroX_namespace.H  Make.FerroX  Make.package  Plotfile.cpp  main.cpp
FerroX/Source/Input/: CMakeLists.txt
FerroX/Source/Solver/: CMakeLists.txt  ChargeDensity.cpp  DerivativeAlgorithm.H  ElectrostaticSolver.H  ElectrostaticSolver.cpp  Initialization.H  Initialization.cpp  TotalEnergyDensity.H  TotalEnergyDensity.cpp
FerroX/Source/Utils/: CMakeLists.txt  FerroXVersion.H.in
FerroX/cmake/: FerroXFunctions.cmake
FerroX/cmake/dependencies/: AMReX.cmake  SUNDIALS.cmake
(+522 files in other folders)
